// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview welcome component should render a Overview welcome screen 1`] = `
<EuiPage
  className="wz-welcome-page"
>
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiFlexGroup>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Security Information Management"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGrid
              columns={2}
            >
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeGeneral"
                  description="Browse through your security alerts, identifying issues and threats in your environment."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="dashboardApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Security events"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeFim"
                  description="Alerts related to file changes, including permissions, content, ownership and attributes."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="filebeatApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Integrity monitoring"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeAws"
                  description="Security events related to your Amazon AWS services, collected directly via AWS API."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="logoAWSMono"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Amazon AWS"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeGcp"
                  description="Security events related to your Google Cloud Platform services, collected directly via GCP API."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="logoGCPMono"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Google Cloud Platform"
                />
              </EuiFlexItem>
            </EuiFlexGrid>
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Auditing and Policy Monitoring"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGrid
              columns={2}
            >
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomePm"
                  description="Verify that your systems are configured according to your security policies baseline."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="advancedSettingsApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Policy monitoring"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeAudit"
                  description="Audit users behavior, monitoring command execution and alerting on access to critical files."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="monitoringApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="System auditing"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeOscap"
                  description="Configuration assessment and automation of compliance monitoring using SCAP checks."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="codeApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="OpenSCAP"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeCiscat"
                  description="Configuration assessment using Center of Internet Security scanner and SCAP checks."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="auditbeatApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="CIS-CAT"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeSca"
                  description="Scan your assets as part of a configuration assessment audit."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="securityAnalyticsApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Security configuration assessment"
                />
              </EuiFlexItem>
            </EuiFlexGrid>
          </EuiPanel>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer
        size="xl"
      />
      <EuiFlexGroup>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Threat Detection and Response"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGrid
              columns={2}
            >
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeVuls"
                  description="Discover what applications in your environment are affected by well-known vulnerabilities."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="securityApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Vulnerabilities"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeVirustotal"
                  description="Alerts resulting from VirusTotal analysis of suspicious files via an integration with their API."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="savedObjectsApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="VirusTotal"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeOsquery"
                  description="Osquery can be used to expose an operating system as a high-performance relational database."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="searchProfilerApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Osquery"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeDocker"
                  description="Monitor and collect the activity from Docker containers such as creation, running, starting, stopping or pausing events."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="logoDocker"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Docker listener"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeMitre"
                  description="Security events from the knowledge base of adversary tactics and techniques based on real-world observations"
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="spacesApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="MITRE ATT&CK"
                />
              </EuiFlexItem>
            </EuiFlexGrid>
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Regulatory Compliance"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGrid
              columns={2}
            >
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomePci"
                  description="Global security standard for entities that process, store or transmit payment cardholder data."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="visTagCloud"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="PCI DSS"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeNist"
                  description="National Institute of Standards and Technology Special Publication 800-53 (NIST 800-53) sets guidelines for federal information systems."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="apmApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="NIST 800-53"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeTsc"
                  description="Trust Services Criteria for Security, Availability, Processing Integrity, Confidentiality, and Privacy"
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="apmApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="TSC"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeGdpr"
                  description="General Data Protection Regulation (GDPR) sets guidelines for processing of personal data."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="visBarVertical"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="GDPR"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeHipaa"
                  description="Health Insurance Portability and Accountability Act of 1996 (HIPAA) provides data privacy and security provisions for safeguarding medical information."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="emsApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="HIPAA"
                />
              </EuiFlexItem>
            </EuiFlexGrid>
          </EuiPanel>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPage>
`;

exports[`Overview welcome component should render a Overview welcome screen with any extension 1`] = `
<EuiPage
  className="wz-welcome-page"
>
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiFlexGroup>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Security Information Management"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGrid
              columns={2}
            >
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeGeneral"
                  description="Browse through your security alerts, identifying issues and threats in your environment."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="dashboardApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Security events"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeFim"
                  description="Alerts related to file changes, including permissions, content, ownership and attributes."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="filebeatApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Integrity monitoring"
                />
              </EuiFlexItem>
            </EuiFlexGrid>
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Auditing and Policy Monitoring"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGrid
              columns={2}
            >
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomePm"
                  description="Verify that your systems are configured according to your security policies baseline."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="advancedSettingsApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Policy monitoring"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeSca"
                  description="Scan your assets as part of a configuration assessment audit."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="securityAnalyticsApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Security configuration assessment"
                />
              </EuiFlexItem>
            </EuiFlexGrid>
          </EuiPanel>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer
        size="xl"
      />
      <EuiFlexGroup>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Threat Detection and Response"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGrid
              columns={2}
            >
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeVuls"
                  description="Discover what applications in your environment are affected by well-known vulnerabilities."
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="securityApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="Vulnerabilities"
                />
              </EuiFlexItem>
              <EuiFlexItem>
                <EuiCard
                  className="homSynopsis__card"
                  data-test-subj="overviewWelcomeMitre"
                  description="Security events from the knowledge base of adversary tactics and techniques based on real-world observations"
                  icon={
                    <EuiIcon
                      color="primary"
                      size="xl"
                      type="spacesApp"
                    />
                  }
                  layout="horizontal"
                  onClick={[Function]}
                  title="MITRE ATT&CK"
                />
              </EuiFlexItem>
            </EuiFlexGrid>
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem>
          <EuiPanel
            betaBadgeLabel="Regulatory Compliance"
          >
            <EuiSpacer
              size="s"
            />
            <EuiFlexGroup>
              <EuiFlexItem>
                <EuiCallOut
                  color="success"
                  iconType="help"
                  title={
                    <p>
                      Click the 
                      <EuiIcon
                        type="eye"
                      />
                       icon to show regulatory compliance extensions.
                    </p>
                  }
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiPanel>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPage>
`;
